--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "portfolio",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://kethnulee-weerasinghe4.github.io/PortfolioWebsite",
     "dependencies": {
         "@testing-library/dom": "^10.4.1",
         "@testing-library/jest-dom": "^6.9.1",
@@ -17,7 +18,10 @@
     "scripts": {
         "start": "react-scripts start",
         "build": "react-scripts build",
-        "test": "react-scripts test"
+        "test": "react-scripts test",
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
